working on invite and clipboard problems

--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -156,6 +156,7 @@
 
     <span><button id="wButton2" onclick="window.open(window.location.origin, '_blank')" hidden>W</button></span>
     <span><button id="testButton2" onclick="doTest()" hidden>T</button></span>
+    <div id="inviteURL" hidden> </div>
     <br />
     <canvas id="myCanvas" width="200" height="200" 
             style="border:1px solid #d3d3d3; background-color:green">
