Display invite for 10s if clipboard impossible

--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -157,10 +157,11 @@
     <span><button id="wButton2" onclick="window.open(window.location.origin, '_blank')" hidden>W</button></span>
     <span><button id="testButton2" onclick="doTest()" hidden>T</button></span>
     <div id="inviteURL" hidden> </div>
-    <br />
-    <canvas id="myCanvas" width="200" height="200" 
-            style="border:1px solid #d3d3d3; background-color:green">
-    </canvas>
+    <div>
+      <canvas id="myCanvas" width="200" height="200" 
+              style="border:1px solid #d3d3d3; background-color:green">
+      </canvas>
+    </div>
     <!-- can position canvas with something like 
       ; position:absolute; left:50px
       in style=, and then would have to adjust 50px in resize
