--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -137,7 +137,7 @@
         First enter your Name then <br />
         1) <strong>Create</strong> a new game (and wait for others to join it) or  <br />
         2) Select a Game and <strong>Join</strong> it or <br />
-        3) Select a Bot and <strong>Play It</strong>. (Under redevelopment.) <p></p>
+        3) Select a Bot and <strong>Play It</strong><p></p>
       </div>
       <div id="invitedHelp" hidden>
         1) Enter your Name then press <strong>Join</strong><p></p>
